docs: change docs user
